--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   ],
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc --build tsconfig.prod.json",
+    "build": "rimraf ./build && tsc --build tsconfig.json",
     "start:dev": "nodemon",
-    "start": "npm run build && node -r module-alias/register build/index.js",
+    "start": "npm run build && ts-node -r tsconfig-paths/register build/index.js",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
     "prettier-format": "run-script-os",
@@ -34,7 +34,8 @@
     "@app": "build/app",
     "@config": "build/config",
     "@db": "build/db",
-    "@repositories": "build/repositories"
+    "@repositories": "build/repositories",
+    "@services": "build/services"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -74,6 +75,7 @@
     "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^6.2.6",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "ts-node": "^10.4.0"
   }
 }
